--- a/scss/abstracts/_colors.scss
+++ b/scss/abstracts/_colors.scss
@@ -2,11 +2,21 @@ $font-color: #fff;
 $background-color: rgba(0, 0, 255, 0.5); //blue
 $fog-color: darkslategray; // or try darkolivegreen
 $night-color: rgba(204, 0, 102, 0.5); // ruby or try midnightblue
+
+//Main Background darker contrast and shadow
 $mask-color: rgba(0, 0, 0, 0.1);
-$button-color: transparent;
-$bordercolor: lightgray;
-$container-bgcolor: #f2f2f2;
-$button-textcolor: #fff;
 $shadowcolor: #fff;
+
+// Main border and HR
+$bordercolor: lightgray;
+
+$container-bgcolor: #f2f2f2;
+
+//Buttons - Text and Background
+$button-textcolor: #fff;
+$button-color: transparent;
+
+//Skip link
 $text-shadow-color: #000;
+
 $fadecolor: rgba(255, 255, 255, 0.6);
