--- a/scss/abstracts/_colors.scss
+++ b/scss/abstracts/_colors.scss
@@ -1,5 +1,5 @@
 $font-color: #fff;
-$background-color: rgba(0, 0, 255, 0.5); //blue
+$background-color: #000000b9; //blue
 $fog-color: darkslategray; // or try darkolivegreen
 $night-color: rgba(204, 0, 102, 0.5); // ruby or try midnightblue
 
