--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -6,6 +6,9 @@
 
 html {
   background-color: $background-color;
+  background-image: url(https://source.unsplash.com/1600x900/?landscape);
+  background-size: cover;
+  background-blend-mode: overlay;
   font-size: 16px;
   font-family: 'Montserrat', sans-serif;
   font-weight: bold;
